version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ScopeDefinedByType.rst.txt
.. vale off



:class:`ScopeDefinedByType`
===========================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType

   Bases: :py:obj:`enum.Enum`


   
   This enum is referenced in the “Control” tree node and reflects how a scope is being defined. Based on the type of a scope definition different rules are applied which define the applicable list of scope definitions to be used.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ScopeDefinedByType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Outcome`
            - 
          * - :py:attr:`~Value`
            - 








Attribute detail
----------------
.. py:attribute:: Outcome
   :value: 1


.. py:attribute:: Value
   :value: 0






.. vale on