version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/DataModel/MechanicalEnums/MeshWorkflow/ScopeDefinedByType.rst.txt
.. vale off



:class:`ScopeDefinedByType`
===========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.DataModel.MechanicalEnums.MeshWorkflow.ScopeDefinedByType

   Bases: :py:obj:`object`


   
   This enum is referenced in the 'Control' tree node and reflects how a scope is being defined. Based on the type of a scope definition different rules are applied which define the applicable list of scope definitions to be used.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: ScopeDefinedByType

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CompareTo`
            - CompareTo method.
          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~GetTypeCode`
            - GetTypeCode method.
          * - :py:attr:`~HasFlag`
            - HasFlag method.
          * - :py:attr:`~ToString`
            - ToString method.












Method detail
-------------
.. py:method:: CompareTo(target: Any) -> int

   
   CompareTo method.

   ..
       !! processed by numpydoc !!

.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetTypeCode() -> typeCode

   
   GetTypeCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: HasFlag(flag: System.Enum) -> bool

   
   HasFlag method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on